# art-expert-telegram-bot

./: Dockerfile  README.md  art-expert.code-workspace  bot.py  requirements.txt
.github/workflows/: fly.yml  fly_deploy.yml  lint.yml  lint_model.yml
bot/: .dockerignore  Dockerfile  bot.py  bot_deployed.py  fly.toml  pyproject.toml  requirements.txt  run_bot.py
bot/bot/: model_client.py  settings.py  tg_bot.py
data/: TestingService.ipynb  TestingServicesForFinals.ipynb  utils.py
fastapi-deployment/: Dockerfile  app-fastapi.mlem  app-fastapi.mlem.state  app-flyio.mlem  app-flyio.mlem.state  build_docker.sh  deploy_docker.sh  deploy_model.sh  deploy_with_monitoring.py  fly.toml  lang_metric.py  price.mlem  pyproject.toml  serve.sh  serve_with_monitoring.py  server.mlem
fastapi-deployment/dockerdir.bak/: Dockerfile
fastapi-deployment/models/full_dataset/: mlem_full_dataset.mlem
fastapi-deployment/models/full_dataset/mlem_full_dataset/: 439c902a-1f22-4b8e-bf68-4999a899851c.io  data.pkl
fastapi-deployment/models/orig_dataset/: mlem_orig_dataset.mlem
fastapi-deployment/models/orig_dataset/mlem_orig_dataset/: 1ef49cbe-941a-48fd-9adc-f60409053cf1  data.pkl
fastapi-deployment/price/: model  postprocess  preprocess
notebooks/prepare_dataset/: prepare_dataset.ipynb
notebooks/pricing_model/: art_pricing_model_training.ipynb
parse_images/: README.md  parse_artsy.py  parse_bidtoart.py  parse_bidtoart_source.py
parse_images/artsy/final/: artsy.csv
parse_images/bidtoart/final/: bidtoart.csv
parse_images/menziesartbrands/: README.md  parse_images.ipynb  small_visual_analys.ipynb
parse_images/menziesartbrands/data/: menziesartbrands_data.csv
parse_images/results/: bidtoart.csv
