[tool.poetry]
name = "fastapi-deployment"
version = "0.1.0"
description = ""
authors = ["Pavel Ignatovich <p.ignatovich97@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
mlem = {version = "==0.4.12", extras = ["streamlit", "flyio"]}
tensorflow = "==2.12.0"
keras = "==2.12.0"
prometheus-fastapi-instrumentator = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
